# aes-gcm-siv-impl

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: test_vectors.rs
