[package]
name = "aes-gcm-siv-impl"
version = "0.1.0"
edition = "2021"
description = "AES-GCM-SIV implementation according to RFC 8452"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
aes-gcm-siv = "0.11.1"
clap = { version = "4.4.11", features = ["derive"] }
hex = "0.4.3"
rand = "0.9.1"
rand_chacha = "0.9.0"

[dev-dependencies]
hex-literal = "0.4.1"
